--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -33,7 +33,7 @@ phases:
   build:
     commands:
       # Use Build phase to build your artifacts (compile, package, etc.)
-      # - echo "[Build phase]"
+      - echo "[Build phase]"
       # We package the SAM template and create `packaged.yaml` file that will be used in our pipeline for deployment
       ## Here we separate Build from Deployment and segregate permissions for different steps
 
@@ -42,22 +42,22 @@ phases:
 
       # - echo "Starting SAM packaging `date` in `pwd`"
 
-      # - pip install --user aws-sam-cli
-      # - USER_BASE_PATH=$(python -m site --user-base)
-      # - export PATH=$PATH:$USER_BASE_PATH/bin
-      # - echo "Before Build---"
+      - pip install --user aws-sam-cli
+      - USER_BASE_PATH=$(python -m site --user-base)
+      - export PATH=$PATH:$USER_BASE_PATH/bin
+      - echo "Before Build---"
 
-      # - ls -lart
-      # - sam build --use-container --template-file template.yaml
-      # - ls -lart
-      # - ls -lart .aws-sam
+      - ls -lart
+      - sam build --template-file template.yaml # --use-container
+      - ls -lart
+      - ls -lart .aws-sam
       # # to be very specific -- although this is whole point of SAM
-      # - sam package --template-file .aws-sam/build/template.yaml --s3-bucket $BUILD_OUTPUT_BUCKET --output-template-file packaged.yaml
+      - sam package --template-file .aws-sam/build/template.yaml --s3-bucket $BUILD_OUTPUT_BUCKET --output-template-file packaged.yaml
 
 
 
       # Just build without docker for now
-      - aws cloudformation package --template-file template.yaml --s3-bucket $BUILD_OUTPUT_BUCKET --output-template-file packaged.yaml
+      # - aws cloudformation package --template-file template.yaml --s3-bucket $BUILD_OUTPUT_BUCKET --output-template-file packaged.yaml
   post_build:
     commands:
       # Use Post Build for notifications, git tags and any further customization after build
